NEW - bug 234621: exception creating sybase driver https://bugs.eclipse.org/bugs/show_bug.cgi?id=234621 NEW - bug 234844: some sybase plugins need updated manifests https://bugs.eclipse.org/bugs/show_bug.cgi?id=234844

--- a/plugins/org.eclipse.datatools.enablement.sybase.asa.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.sybase.asa.ui/plugin.properties
@@ -16,3 +16,6 @@ proxytable.name = Proxy Table
 event.node.name = Event Folder
 proxytable.node.name = Proxy Table Folder
 datatype.node.name = Data Type Folder
+
+Plugin.name = Sybase ASA Connection Profile UI Plug-in
+Plugin.providerName = Eclipse.org
