--- a/plugins/org.eclipse.datatools.enablement.sybase.asa/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.sybase.asa/plugin.properties
@@ -20,3 +20,6 @@ driverPWD = Password
 
 org.eclipse.datatools.enablement.sybase.asa.9_x.other.driverTemplate = Other Driver
 org.eclipse.datatools.enablement.sybase.asa.10_0.other.driverTemplate = Other Driver
+
+Plugin.name = Sybase ASA Plug-in
+Plugin.providerName = Eclipse.org
