--- a/plugins/org.eclipse.datatools.enablement.sybase.ase.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.sybase.ase.ui/plugin.properties
@@ -24,3 +24,6 @@ default.node.name = Default Folder
 rule.node.name = Rule Folder
 proxytable.node.name = Proxy Table Folder
 webservicetable.node.name = Web Services as Tables Folder
+
+pluginName = ASE Enablement UI Plug-in
+providerName = Eclipse.org
