--- a/features/org.eclipse.datatools.enablement.sybase.feature/feature.properties
+++ b/features/org.eclipse.datatools.enablement.sybase.feature/feature.properties
@@ -1,18 +1,18 @@
 # /**
 #  * <copyright>
 #  *
-#  * Copyright (c) 2002-2005 IBM Corporation and others.
+#  * Copyright (c) 2008 Sybase, Inc. and others.
 #  * All rights reserved.   This program and the accompanying materials
 #  * are made available under the terms of the Eclipse Public License v1.0
 #  * which accompanies this distribution, and is available at
 #  * http://www.eclipse.org/legal/epl-v10.html
 #  * 
 #  * Contributors: 
-#  *   IBM - Initial API and implementation
+#  *   Sybase - Initial API and implementation
 #  *
 #  * </copyright>
 #  *
-#  * $Id: feature.properties,v 1.5 2005/06/08 06:23:46 nickb Exp $
+#  * $Id: feature.properties,v 1.1 2008/02/04 21:22:29 jgraham Exp $
 #  */
 
 # "featureName" property - name of the feature
