--- a/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/plugin.properties
@@ -165,6 +165,9 @@ connectedConnection = Live Connection
 disconnectedConnection = Disconnected Connection
 cachedConnection = Cached Connection
 catalog = Catalog
+user = User
+group = Group
+role = Role
 
 DEFAULT_SCHEMA_FILTER_PROPERTY_PAGE_NAME=Default Schema Filter
 DEFAULT_TABLE_FILTER_PROPERTY_PAGE_NAME=Default Table Filter
