--- a/plugins/org.eclipse.datatools.modelbase.sql.query.edit/plugin.properties
+++ b/plugins/org.eclipse.datatools.modelbase.sql.query.edit/plugin.properties
@@ -1,17 +1,19 @@
 # NLS_MESSAGEFORMAT_VAR          needed to handle quotes correctly
 
-# ====================================================================
-# Licensed Materials - Property of IBM
-# com.ibm.db.models.sql.query.edit
-# (C) Copyright IBM Corporation 2005. All Rights Reserved.
-#
-# Note to U.S. Government Users Restricted Rights:
-#   Use, duplication or disclosure restricted 
-#   by GSA ADP Schedule Contract with IBM Corp.
-# ====================================================================
+###############################################################################
+# Copyright (c) 2005 IBM Corporation and others.
+# All rights reserved. This program and the accompanying materials
+# are made available under the terms of the Eclipse Public License v1.0
+# which accompanies this distribution, and is available at
+# http://www.eclipse.org/legal/epl-v10.html
+# 
+# Contributors:
+#     IBM Corporation - initial API and implementation
+###############################################################################
+
 
 # ====================================================================
-# $Id: plugin.properties,v 1.1 2007/09/25 23:18:03 bpayton Exp $
+# $Id: plugin.properties,v 1.2 2008/01/31 02:58:42 bpayton Exp $
 # @generated NOT
 # ====================================================================
 
