[238387]Issues of datatools features/plugins in Eclipse about dialogue [237847]Missing update URL's for some data tools features

--- a/features/org.eclipse.datatools.connectivity.doc.user/feature.properties
+++ b/features/org.eclipse.datatools.connectivity.doc.user/feature.properties
@@ -10,16 +10,16 @@
 ###############################################################################
             
 featureName = Data Tools Platform User Documentation Feature
-#
+
 providerName = Eclipse.org
-#
-featureDesc = Data Tools Platform Documentation Feature
-#
-featureCopyright = Copyright (c) 2008 Sybase, Inc. All rights reserved. This program and the accompanying materials are made available under the terms of the Eclipse Public License v1.0 which accompanies this distribution, and is available at http://www.eclipse.org/legal/epl-v10.html
-#
-featureLicenseURL = license.html
-#
-featureLicenseTxt=\
+
+description = Data Tools Platform Documentation Feature
+
+copyright = Copyright (c) 2008 Sybase, Inc. All rights reserved. This program and the accompanying materials are made available under the terms of the Eclipse Public License v1.0 which accompanies this distribution, and is available at http://www.eclipse.org/legal/epl-v10.html
+
+licenseURL = license.html
+
+license=\
 ECLIPSE FOUNDATION SOFTWARE USER AGREEMENT\n\
 March 17, 2005\n\
 \n\
@@ -118,14 +118,5 @@ and re-export of encryption software, to see if this is permitted.\n\
 Java and all Java-based trademarks are trademarks of Sun Microsystems, Inc. in the United States, other countries, or both.\n
 
 # # # # # # # # # # end of "featureLicenseTxt" property # # # # # # # # # # # #
-#
-updateSiteURL = http://download.eclipse.org/datatools/updates
-#
-featureUpdateSiteName = DTP Update Site
-#
-discoverySiteURL = http://download.eclipse.org/datatools/updates
-#
-featureDiscoverySiteName = DTP Update Site
-#
-featureDiscoverySiteType = update
-#
+
+
