--- a/features/org.eclipse.datatools.doc.user/feature.properties
+++ b/features/org.eclipse.datatools.doc.user/feature.properties
@@ -1,16 +1,12 @@
 # feature.properties file for org.eclipse.datatools.intro
-#
 
-copyright=Copyright (c) 2006 Sybase, Inc. and others
+copyright=Copyright (c) 2008 Sybase, Inc. All rights reserved. This program and the accompanying materials are made available under the terms of the Eclipse Public License v1.0 which accompanies this distribution, and is available at http://www.eclipse.org/legal/epl-v10.html
 
 # "featureName" property - name of the feature
 featureName=Data Tools Platform Documentation
 
 # "providerName" property - name of the company that provides the feature
 providerName=Eclipse.org
-
-# "updateSiteName" property - label for the update site
-updateSiteName=Eclipse.org update site
 
 # "description" property - description of the feature
 description=Data Tools Platform Documentation
