--- a/features/org.eclipse.datatools.common.doc.user/feature.properties
+++ b/features/org.eclipse.datatools.common.doc.user/feature.properties
@@ -9,7 +9,7 @@
 #
 ###############################################################################
 
-copyright=Copyright (c) 2006 Sybase, Inc. and others
+copyright=Copyright (c) 2008 Sybase, Inc. All rights reserved. This program and the accompanying materials are made available under the terms of the Eclipse Public License v1.0 which accompanies this distribution, and is available at http://www.eclipse.org/legal/epl-v10.html
             
 featureName = Data Tools Platform User Documentation Feature
 
