[237864] Refactored and added Optional Properties UI tab to various DBMS DriverUIContributor base class

--- a/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
@@ -158,14 +158,15 @@ ExtensibleNewConnectionProfileWizard.title = New Connection Profile
 
 DriverUIContributorComposite.group = &Properties
 
-OtherDriverUIContributor.generaltab = General
-OtherDriverUIContributor.optionaltab = Optional
+CommonDriverUIContributor.optionaltab = &Optional
+CommonDriverUIContributor.optionalProps.label = Additional properties:
+CommonDriverUIContributor.generaltab = G&eneral
+
 OtherDriverUIContributor.databaseName.label = D&atabase:
 OtherDriverUIContributor.url.label = &URL:
 OtherDriverUIContributor.userName.label = U&ser name:
 OtherDriverUIContributor.password.label = &Password:
 OtherDriverUIContributor.savePassword.label = Sa&ve password
-OtherDriverUIContributor.optionalProps.label = Additional properties:
 OtherDriverUIContributor.summaryData.database = Database
 OtherDriverUIContributor.summaryData.username = User name
 OtherDriverUIContributor.summaryData.savePassword = Save Password
