--- a/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/plugin.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2001, 2004 IBM Corporation and others.
+# Copyright (c) 2001, 2004, 2008 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -168,6 +168,7 @@ catalog = Catalog
 user = User
 group = Group
 role = Role
+authorization = Authorization ID
 
 DEFAULT_SCHEMA_FILTER_PROPERTY_PAGE_NAME=Default Schema Filter
 DEFAULT_TABLE_FILTER_PROPERTY_PAGE_NAME=Default Table Filter
