NEW - bug 240552: "New Repository Wizard Window" title should be externalized. https://bugs.eclipse.org/bugs/show_bug.cgi?id=240552

--- a/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
@@ -182,3 +182,5 @@ ConnectAction.title = Properties for {0}
 
 Boolean.true = true
 Boolean.false = false
+
+NewRepositoryWizard.title = New Repository Wizard Window
