--- a/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/plugin.xml
@@ -78,4 +78,25 @@
          <adapter type="org.eclipse.ui.views.properties.IPropertySource"/>
       </factory>
    </extension>
+
+<!-- Provide an override of IDs -->
+   <extension
+   		point="org.eclipse.datatools.connectivity.sqm.core.ui.elementID">
+   		<provider class = "org.eclipse.datatools.connectivity.sqm.server.internal.ui.util.TransientEObjectUtil"/>
+   </extension>
+      
+<!-- Add a Navigator Action extension -->
+<!-- Bookmark global Action-->
+   <extension
+         point="org.eclipse.ui.navigator.navigatorContent">
+      <actionProvider
+            class="org.eclipse.datatools.connectivity.sqm.server.internal.ui.explorer.actions.popup.BookmarkAction"
+            id="org.eclipse.datatools.connectivity.sqm.server.internal.ui.explorer.actions.popup.BookmarkAction">
+	        <enablement>
+	            <or>
+		        	<adapt type="org.eclipse.datatools.modelbase.sql.schema.SQLObject" /> 
+		        </or>
+			 </enablement>	
+      </actionProvider>
+   </extension>
 </plugin>
