237583: No need to have 'select' action when run/debug a trigger.

--- a/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/plugin.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/plugin.properties
@@ -18,6 +18,7 @@ NewSQLScrapbookPage.description=Create a SQL File
 
 NewSQLScrapbookFileCreationWizard.title=New SQL File
 NewSQLScrapbookFileWizardPage.title=Create SQL File
+NewSQLScrapbookFileWizardPage.description=Create a new SQL file
 
 NewSQLScrapbookFileWizardPage.error.AlreadyExists=A file with the specified path already exists.
 NewSQLScrapbookFileWizardPage.open_error.message=Error occurred while opening SQL File Editor
