--- a/plugins/org.eclipse.datatools.connectivity.oda.design/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design/plugin.properties
@@ -1,5 +1,5 @@
 # ====================================================================
-# * Copyright (c) 2005, 2006 Actuate Corporation.
+# * Copyright (c) 2005, 2008 Actuate Corporation.
 # * All rights reserved. This program and the accompanying materials
 # * are made available under the terms of the Eclipse Public License v1.0
 # * which accompanies this distribution, and is available at
@@ -10,7 +10,7 @@
 # *  
 # *************************************************************************
 # *
-# * $Id: plugin.properties,v 1.2 2006/02/04 10:30:26 lchan Exp $
+# * $Id: plugin.properties,v 1.3 2006/03/07 02:00:04 lchan Exp $
 # ====================================================================
 #
 # ====================================================================
@@ -26,3 +26,5 @@
 # ====================================================================
 #
 pluginName=DTP ODA Design Session Model
+providerName = Eclipse.org
+
