NEW - bug 241389: GenericDDLGenerator checks wrong option in generating UDT-s https://bugs.eclipse.org/bugs/show_bug.cgi?id=241389
Also bug 241390
https://bugs.eclipse.org/bugs/show_bug.cgi?id=241390

--- a/plugins/org.eclipse.datatools.connectivity.sqm.core/src/org/eclipse/datatools/connectivity/sqm/internal/core/rte/fe/GenericDdlGeneration.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core/src/org/eclipse/datatools/connectivity/sqm/internal/core/rte/fe/GenericDdlGeneration.properties
@@ -33,3 +33,5 @@ GENERATION_OPTIONS_DES = Options for generation
 ADDITIONAL_ELEMENTS = Additional elements
 ADDITIONAL_ELEMENTS_DES = Generate additional elements
 GENERATE_GENERATE_ASSERTION_DES = Generate assertions
+GENERATE_USER_DEFINED_TYPE = Generate user defined types
+GENERATE_USER_DEFINED_TYPE_DES = Generate user defined types
