CheckIn: Fix bugzilla bug 244254 ODA Web Services:  driverClassPath should be defined as a Public Property

--- a/plugins/org.eclipse.datatools.enablement.oda.ws/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.ws/plugin.properties
@@ -28,3 +28,4 @@ datasource.property.connectionTimeOut=Connection &Time Out
 dataset.property.xmlFileURI=&XML File
 dataset.property.xsdFileURI=&Schema File
 datasource.property.wsdlUrl=&WSDL URL
+datasource.property.driverClassPath=Driver Class&Path
