--- a/plugins/org.eclipse.datatools.enablement.oda.ws/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.oda.ws/plugin.xml
@@ -44,6 +44,14 @@
                      defaultDisplayName="%datasource.property.wsdlUrl"
                      type="string">
                </property>
+               <property
+                     allowsEmptyValueAsNull="true"
+                     canInherit="true"
+                     defaultDisplayName="%datasource.property.driverClassPath"
+                     isEncryptable="false"
+                     name="driverClassPath"
+                     type="string">
+               </property>
             </propertyGroup>
          </properties>
       </dataSource>
