--- a/plugins/org.eclipse.datatools.enablement.sybase.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.sybase.ui/plugin.properties
@@ -36,3 +36,5 @@ webservicetable.node.name = Web Services as Tables Folder
 pluginName = Sybase UI Plug-in
 providerName = Eclipse.org
 
+database.connection.profile.title = Database Connection Profile
+
