--- a/plugins/org.eclipse.datatools.enablement.oda.ecore.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.oda.ecore.ui/plugin.xml
@@ -15,11 +15,23 @@
       </newWizard>
    </extension>
    <extension
+         point="org.eclipse.datatools.connectivity.ui.connectionProfileImage">
+      <profileImage
+            icon="icons/profile.gif"
+            profileID="%oda.data.source.id">
+      </profileImage>
+   </extension>
+   <extension
          point="org.eclipse.ui.propertyPages">
       <page
-            name="%profile.propertypage.name"
-            class="org.eclipse.datatools.connectivity.oda.design.ui.pages.impl.DefaultDataSourcePropertyPage"
-            id="%oda.data.source.id">
+            class="org.eclipse.datatools.enablement.oda.ecore.ui.impl.DataSourcePropertyPage"
+            id="%oda.data.source.id"
+            name="%profile.propertypage.name">
+         <enabledWhen>
+            <instanceof
+                  value="org.eclipse.datatools.connectivity.IConnectionProfile">
+            </instanceof>
+         </enabledWhen>
          <filter
                name="org.eclipse.datatools.profile.property.id"
                value="%oda.data.source.id">
