--- a/plugins/org.eclipse.datatools.enablement.oda.ecore/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.oda.ecore/plugin.xml
@@ -5,16 +5,39 @@
    <extension
          id="%oda.data.source.id"
          point="org.eclipse.datatools.connectivity.oda.dataSource">
-      <dataSource
-            driverClass="org.eclipse.datatools.enablement.oda.ecore.impl.Driver"
-            defaultDisplayName="%datasource.name"
-            setThreadContextClassLoader="false"
-            odaVersion="3.1"
-            id="%oda.data.source.id">
-      </dataSource>
       <dataSet
             defaultDisplayName="%data.set.name"
             id="org.eclipse.datatools.enablement.oda.ecore.dataSet">
+         <properties>
+            <propertyGroup
+                  defaultDisplayName="Dataset Properties"
+                  name="dateset properties">
+               <property
+                     canInherit="true"
+                     defaultDisplayName="OCL-Ecore Invariant"
+                     name="OCL_ECORE_INVARIANT"
+                     type="string">
+               </property>
+               <property
+                     canInherit="true"
+                     defaultDisplayName="Column Definitions"
+                     name="COLUMN_DEFINITIONS"
+                     type="string">
+               </property>
+            </propertyGroup>
+            <propertyVisibility
+                  name="queryText"
+                  visibility="hide">
+            </propertyVisibility>
+            <propertyVisibility
+                  name="OCL_ECORE_INVARIANT"
+                  visibility="hide">
+            </propertyVisibility>
+            <propertyVisibility
+                  name="COLUMN_DEFINITIONS"
+                  visibility="hide">
+            </propertyVisibility>
+         </properties>
          <dataTypeMapping
                nativeDataTypeCode="1"
                odaScalarDataType="String"
@@ -56,6 +79,29 @@
                nativeDataType="BOOLEAN">
          </dataTypeMapping>
       </dataSet>
+      <dataSource
+            driverClass="org.eclipse.datatools.enablement.oda.ecore.impl.Driver"
+            defaultDisplayName="%datasource.name"
+            setThreadContextClassLoader="false"
+            odaVersion="3.1"
+            id="%oda.data.source.id">
+         <properties>
+            <propertyGroup
+                  defaultDisplayName="Connection Properties"
+                  name="connectionProperties">
+               <property
+                     canInherit="true"
+                     defaultDisplayName="URI"
+                     name="MODEL_URI"
+                     type="string">
+               </property>
+            </propertyGroup>
+            <propertyVisibility
+                  name="MODEL_URI"
+                  visibility="change">
+            </propertyVisibility>
+         </properties>
+      </dataSource>
    </extension>
    <extension
          point="org.eclipse.datatools.connectivity.connectionProfile">
@@ -71,7 +117,7 @@
             id="%oda.data.source.id">
       </connectionProfile>
       <connectionFactory
-            name="ODA Connection Factory"
+            name="%oda.connection.factory.name"
             profile="%oda.data.source.id"
             class="org.eclipse.datatools.connectivity.oda.profile.OdaConnectionFactory"
             id="org.eclipse.datatools.connectivity.oda.IConnection">
