219312: SQL Editor white on black: Impossible reed text.

--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/preferences/PreferenceMessages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/preferences/PreferenceMessages.properties
@@ -82,3 +82,4 @@ SyntaxColoringPage_strikethrough=&Strikethrough
 SyntaxColoringPage_underline=&Underline
 SyntaxColoringPage_preview=Previe&w:
 SyntaxColoringPage_syntax_items=S&yntax items:
+SyntaxColoringPage_default_foreground_color=Default &foreground color
